simplify DTO initialization in ProductControllerTest and ProductServiceTest using record constructors